2014-09-18  27  Coding improvements
2014-09-21  32  Default system application and Preferred application implemented, OpenWithDialog 
                has defapp & sandboxing support, OpenWith works initially.
2014-09-22  30  Associated applications and sorted Open With menu implemented.
2014-09-23  30  OpenWithDlg AppList sorting, Rename and unassociate implemented, bugfixes.
2014-09-24  27  OpenWithDlg AppList Remove function, bugfixes, BMEditDialog Preview
2014-09-28  41  Got hands dirty to unify the file archive management.
2014-09-29  41  File management unification more tries and almost complete.
2014-10-01  34  File archive management unification done.
2014-10-07  30  Use relative paths for FileArchive paths, bugfixes and improvements.
2014-10-09  29  Enable sorting, correct save selection behaviour for sorting.
2014-10-13  30  Can sort by both the headers and by BID.
2014-10-14  32  Separated the bookmarks table view and implemented linking tables and UI.
2014-10-15  34  Bookmark Linking support in BMEditDlg complete and working. Added QuickBMSelDlg.
2014-10-26  39  BMViewDlg shows linked bookmarks
2014-10-27  40  Introduced BookmarkExtraInfo tables and UI and initial code.
2014-10-29  42  Bookmark Extra Info adding, viewing, editing, etc all done.
2014-11-06  47  Introduce business logic class, implemented Trashing bookmarks. Ported to Qt5.3.
2014-11-09  48  FirefoxBookmarkJSONFileParser parses Firefox bookmarks json documents into own structs.
2014-11-11  48  Introduce general importers and ImportedBookmarksPreviewDialog
2014-11-13  52  Implemented BookmarkImporter initialization, etc code.
2014-11-14  52  Decided and implemented BookmarkImporter::Analyze, UI updates.
2014-11-15  53  MainWindow shows bookmarks in the preview dialog after analysis.
2014-11-16  51  Don't rely on GUIDs, initial tagged bookmark import implementation.
2015-02-24  56  Worked on importer and imported preview dialog.